<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLiteLab</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="id">ID</string>

    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="get">Get Contact</string>

</resources>
